--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.5+3
   carousel_slider: ^4.1.1
+  cloud_firestore:
 
 dev_dependencies:
   flutter_test:
