--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   firebase_auth: ^3.3.20
   firebase_core: ^1.18.0
+  get: ^4.6.5
+  flutter_screenutil: ^5.5.3+2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
