--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dev_dependencies:
   get: ^4.6.5
   flutter_screenutil: ^5.5.3+2
   animated_splash_screen: ^1.3.0
+  material_floating_search_bar: ^0.3.7
 
 
 # For information on the generic Dart part of this file, see the
@@ -82,12 +83,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: NanumSquare
+      fonts:
+        - asset: fonts/NanumSquareL.otf
+          weight: 300
+        - asset: fonts/NanumSquareR.otf
+          weight: 400
+        - asset: fonts/NanumSquareB.otf
+          weight: 700
+        - asset: fonts/NanumSquareEB.otf
+          weight: 800
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
