--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   carousel_slider: ^4.1.1
   cloud_firestore:
   infinite_carousel: ^1.0.2
+  syncfusion_flutter_charts: ^20.2.36
+  chat_bubbles: ^1.3.0
+  bubble: ^1.2.1
 
 dev_dependencies:
   flutter_test:
