--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   syncfusion_flutter_charts: ^20.2.36
   chat_bubbles: ^1.3.0
   bubble: ^1.2.1
+  proste_bezier_curve:
 
 dev_dependencies:
   flutter_test:
