--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dev_dependencies:
   flutter_screenutil: ^5.5.3+2
   animated_splash_screen: ^1.3.0
   google_sign_in: ^5.4.0
+  fluttertoast: ^8.0.9
 
 
 # For information on the generic Dart part of this file, see the
